--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+application.yml
 
 ### NetBeans ###
 /nbproject/private/
@@ -36,5 +37,4 @@ out/
 ### VS Code ###
 .vscode/
 
-*.yml
-application.properties
+
